--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: "无人区科技南京有限公司"
+title: sales
 email: sales@nomanland.tech
 author: GitHub User
 
