--- a/_config.yml
+++ b/_config.yml
@@ -160,7 +160,7 @@ translate_langs:
 #   - about.md
 
 # Page default value
-defaults:
+#defaults:
 home:
    heading: "欢迎"
    subheading: "欢迎访问无人区科技南京有限公司！"
