--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
-  banner: "Your image url"
+  heading: "欢迎"
+  subheading: "欢迎访问无人区科技南京有限公司！"
+  banner: "assets/images/banners/welcome.png"
