--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ author: GitHub User
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 
-baseurl: "/test" # the subpath of your site, e.g. /blog
-url: "https://jiyif11.github.io/test/" # the base hostname & protocol for your site, e.g. https://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://www.opendc.cn" # the base hostname & protocol for your site, e.g. https://example.com
 favicon: "" # the favicon for your site
 
 # Yat date format
